package com.maayn.accountservice.enums;

public enum AccountStatus {
    PENDING,
    ACTIVE,
    FROZEN,
    CLOSED
}

