package com.maayn.accountservice.enums;

public enum AccountType {
    CHECKING,
    SAVINGS,
    INVESTMENT
}

